# hero

./: README.md  build.gradle  import-summary.txt  settings.gradle
app/: build.gradle  hero.jks
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  PWEncry.c  com_example_administrator_hero_util_MsgDigest.h
app/src/main/res/drawable/: animation1.xml  bg_edittext.xml  bg_edittext_focused.xml  bg_edittext_normal.xml  bg_spinner.xml  btn_bg.xml  checkbox_item.xml  dialog_bg_nor.xml  loadtype.xml  login_bg_foc.xml  login_bg_nor.xml  login_edittext.xml  progress_round.xml  radio.xml  register_bg_foc.xml  register_bg_nor.xml  register_edittext.xml  round_button_normal.xml  uid_edittext.xml  uid_foc.xml  uid_nor.xml
app/src/main/res/layout/: account_setting.xml  acount.xml  activity_main.xml  activity_test_play_media_in_web_view.xml  app_auth.xml  app_sharemenu.xml  app_user.xml  autocomplete_item.xml  customprogressdialog.xml  details.xml  dialog.xml  dialog_item.xml  equip_list_view_item.xml  equipfragment.xml  forgot.xml  formcustomspinner.xml  fragment1.xml  fragment2.xml  fragment3.xml  gridview_item.xml  item.xml  left_fragment.xml  list_view_item.xml  myactionbar.xml  progress_dialog.xml  search_layout.xml  second_layout.xml  setheadportrait.xml  showsearch.xml  sign_up.xml  skillfragment.xml  sliding_menu.xml  sliding_menu_row.xml  splash.xml  storyfragment.xml  stratagefragment.xml  tab_item_fragment_main.xml  userfavorite.xml  userlogin.xml  (+2 more)
gradle/wrapper/: gradle-wrapper.properties
sliding_library/: build.gradle
tabLibrary/: build.gradle
(+67 files in other folders)
